--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -1,11 +1,22 @@
-﻿<body>
+﻿<nav class="navbar navbar-inverse" xmlns:margin-right="http://www.w3.org/1999/xhtml"
+     xmlns:margin-right="http://www.w3.org/1999/xhtml" xmlns:margin-right="http://www.w3.org/1999/xhtml">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand">Borrowing admin-console</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+    </div>
+  </div>
+</nav>
 
 
-    <img src="../../assets/images/borrowing_logo_new.jpg"
+
+<body>
+    <img src="../../assets/images/logo_pig.png"
          class="img-responsive center-block"
          style="max-height:300px;padding-bottom:50px"/>
 
 
-    <a (click)="login()"><img src="../../assets/images/fb_button.png" class="img-responsive center-block"></a>
+    <a (click)="login()"><img src="../../assets/images/fb_btn.png" class="img-responsive center-block"></a>
 
 </body>
