--- a/src/app/home/login.component.css
+++ b/src/app/home/login.component.css
@@ -1,4 +1,4 @@
-
+/*
 @media (max-width: 600px) {
   #page {
     padding: 1em;
@@ -14,3 +14,80 @@
   }
 
 }
+*/
+.container {
+  text-align: center;
+  top: 35%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  color: white;
+  height: 170px;
+  width: 170px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  font-family: 'Montserrat', sans-serif;
+  -webkit-transition: width 2s, height 2s, -webkit-transform 2s; /* Safari */
+  transition: width 2s, height 2s, transform 2s;
+}
+
+.logo:hover {
+  width: 300px;
+  height: 300px;
+  -webkit-transform: rotate(365deg); /* Safari */
+  transform: rotate(365deg);
+}
+
+.title {
+  color: #422744;
+  font-size: 50px;
+}
+
+.text {
+  white-space: nowrap;
+  font-style: italic;
+  line-height: 130%;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.loginButton {
+  top: 70%;
+  left: 50%;
+  position: absolute;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  background-color: #266ac1;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  padding: 14px 40px;
+}
+
+.bannerTitle {
+  color: #422744;
+  margin-left: 10px;
+  font-size: 20px;
+  display: inline;
+}
+
+.bannerText {
+  color: black;
+  font-size: 12px;
+  font-style: italic;
+  white-space: nowrap;
+  display: inline;
+}
+
+
