--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -1,22 +1,12 @@
-﻿<nav class="navbar navbar-inverse" xmlns:margin-right="http://www.w3.org/1999/xhtml"
-     xmlns:margin-right="http://www.w3.org/1999/xhtml" xmlns:margin-right="http://www.w3.org/1999/xhtml">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand">Borrowing admin-console</a>
-    </div>
-    <div id="navbar" class="collapse navbar-collapse">
-    </div>
-  </div>
-</nav>
-
-
+﻿﻿
 
 <body>
-    <img src="../../assets/images/logo_pig.png"
-         class="img-responsive center-block"
-         style="max-height:300px;padding-bottom:50px"/>
+<div class="container">
+<img src="./assets/icons/logo.svg" class="logo">
+<div class="title"><b>Borrowing</b></div>
+<div class="text">Lending and borrowing<br>made easy!</div>
+</div>
 
-
-    <a (click)="login()"><img src="../../assets/images/fb_btn.png" class="img-responsive center-block"></a>
+  <button class="loginButton" (click)="login()"><img src="./assets/icons/fb-icon.svg" width="20" height="20"/> Sign in with Facebook</button>
 
 </body>
