--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -2,21 +2,21 @@
   <!-- <table class='table table-striped'>   -->
   <table class='table table-hover'>
     <thead>
-    <tr>
+    <tr bgcolor="#422744">
+
+      <th>Item({{nrOfItem}}):</th>
       <th></th>
-      <th>Item</th>
+      <th>Borrower:</th>
       <th></th>
-      <th>Borrower</th>
-      <th>Due date</th>
-      <th>Reserved</th>
-      <th>Entities</th>
-      <th>Status</th>
+      <th>Due date:</th>
+      <th>Reserved:</th>
+      <th>Status:</th>
     </tr>
     </thead>
     <tbody>
 
 
-    <tr *ngFor='let item of visibleItems | itemFilter:listFilter , let i = index '  [class.red]=" item.status==='Notify'"   (click)="setClickedRow(i,item.$key)" [class.active]='i == currentRow'>
+    <tr *ngFor='let item of visibleItems | itemFilter:listFilter , let i = index '   (click)="setClickedRow(i,item.$key)" [class.active]='i == currentRow'>
       <td width=10>
         <div *ngIf="item.photoURL">
           <img   style="float: left" [src]='item.photoURL'
@@ -25,7 +25,9 @@
       </td>
 
       <!--   <a [routerLink]="['/item/'+item.$key]">{{ item.name }}</a>    -->
+      <div class="verticalCenter">
       <td>{{ item.name }}</td>
+      </div>
 
    <!--   <td><a   item.$key  >{{ item.name }}</a></td>  -->
 
@@ -36,13 +38,13 @@
                [style.margin.px]='imageMargin'></div>
       </td>
 
+      <div style="margin-top: 9% ">
       <td *ngIf="item.loan">{{ item.loan.loanerName}}</td>
       <td *ngIf="(!item.loan)"></td>
-
+      </div>
 
       <td *ngIf="item.loan">{{ item.loan.formattedShortDate}}</td>
       <td *ngIf="(!item.loan)"></td>
-
 
       <td>
               <span *ngIf="item.reserved">
@@ -53,8 +55,8 @@
               </span>
       </td>
 
-      <td>{{item.entityName}}</td>
 
+      <div  style="margin-top: 20px">
       <td>
                   <span *ngIf="item.status=='Out' ">
                     <img src="../../assets/images/out-icon.png"
@@ -70,9 +72,11 @@
           <span  *ngIf="item.status=='Notify' ">
                     <img src="../../assets/images/notify-icon.png"
                          style="max-height:50%;max-width:50%"/>
+            Overdue
             </span>
 
       </td>
+      </div>
 
     </tr>
 
