--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -2,11 +2,14 @@
 
 <body>
 <div class="container">
-<img src="./assets/icons/logo.svg" class="logo">
-<div class="title"><b>Borrowing</b></div>
-<div class="text">Lending and borrowing<br>made easy!</div>
+
+    <img src="./assets/icons/logo.svg" class="logo">
+  <div class="title"><b>Borrowing</b></div>
+  <div class="text">Lending and borrowing<br>made easy!</div>
 </div>
 
-  <button class="loginButton" (click)="login()"><img src="./assets/icons/fb-icon.svg" width="20" height="20"/> Sign in with Facebook</button>
+<button class="loginButton" (click)="login()"><img src="./assets/icons/fb-icon.svg" width="20" height="20"/> Sign in
+  with Facebook
+</button>
 
 </body>
