--- a/src/app/items/item-list-nest.css
+++ b/src/app/items/item-list-nest.css
@@ -2,14 +2,16 @@
   color: white;
 }
 
-.table tr:hover  {
+
+.table tr:not(:first-child):hover  {
   background-color:#D9D9D9 ;
   color: white;
   cursor: pointer;
 }
 
+/*
 tr:nth-child(even){background-color: #f2f2f2}
-
+*/
 
 .myDiv {
   width: 800px;
