--- a/src/app/items/item-list-nest.html
+++ b/src/app/items/item-list-nest.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
   <!-- <table class='table table-striped'>   -->
-  <table class='table table-hover'>
+  <table class='table table-striped'>
     <thead>
     <tr bgcolor="#422744">
 
