--- a/src/app/items/item-list.component.html
+++ b/src/app/items/item-list.component.html
@@ -1,22 +1,3 @@
-<nav class="navbar navbar-inverse" xmlns:margin-right="http://www.w3.org/1999/xhtml"
-     xmlns:margin-right="http://www.w3.org/1999/xhtml" xmlns:margin-right="http://www.w3.org/1999/xhtml">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-              aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-
-    </div>
-    <div id="navbar" class="collapse navbar-collapse">
-
-    </div>
-  </div>
-</nav>
-
 
 <popup #popup1 (confirmClick)="onAddSubmit()">
 
@@ -39,7 +20,9 @@
             </option>
           </optgroup>
           <optgroup label="Promoted entities">
+            <!--
             <option *ngFor="let jEntity of joinedEntities " [ngValue]="jEntity"> {{jEntity?.entityName}}</option>
+            -->
           </optgroup>
         </select>
       </div>
@@ -110,13 +93,9 @@
 
       <div class="col-sm-5" >
         <ul>
-          <li *ngIf="tabs" class="one"><a > <img src="./assets/icons/items.svg"
-                                                                    class="grey-button-icon"> Items</a></li>
-          <li *ngIf="tabs" class="two" (click)="redirect('users')"><a><img src="./assets/icons/users.svg"
-                                                                         class="grey-button-icon"> Users</a></li>
-
-          <li *ngIf="tabs" class="three"><a [routerLink]="['/users']"><img src="./assets/icons/entities.svg"
-                                                                           class="grey-button-icon"> Entities</a></li>
+          <li *ngIf="tabs" class="one"><a> <img src="./assets/icons/items.svg" class="grey-button-icon"> Items</a></li>
+          <li *ngIf="tabs" class="two" (click)="redirect('users')"><a><img src="./assets/icons/users.svg" class="grey-button-icon"> Users</a></li>
+          <li *ngIf="tabs" class="three" (click)="redirect('entities')"><a><img src="./assets/icons/entities.svg" class="grey-button-icon"> Entities</a></li>
           <hr/>
         </ul>
       </div>
@@ -137,28 +116,14 @@
     <div class="row">
       <div class="col-sm-2 currentEntity">
         <label>Current entity:</label>
+        <div class="currentEntityText">
+        {{userEntityName}}
+        </div>
       </div>
     </div>
 
 
     <div class="row">
-      <div class="col-sm-3">
-        <select class="form-control selectbox " [(ngModel)]="selectedItem" (ngModelChange)="onclickedValue($event)">
-          <optgroup label="Your entities">
-            <option *ngFor="let entity of entities " [ngValue]="entity"
-                    [attr.selected]="userEntityName==entity?.name ? true : null"> {{entity?.name}}
-            </option>
-            <option>demo</option>
-          </optgroup>
-          <optgroup label="Promoted entities">
-            <option *ngFor="let jEntity of joinedEntities " [ngValue]="jEntity"
-                    [attr.selected]="userEntityName==entity?.name ? true : null"> {{jEntity?.entityName}}
-            </option>
-          </optgroup>
-        </select>
-
-      </div>
-
 
       <div class='col-md-2 ' style="float: right">
         <div class="input-group searchbox">
