--- a/src/app/home/login.component.html
+++ b/src/app/home/login.component.html
@@ -4,8 +4,8 @@
 <div class="container">
 
     <img src="./assets/icons/logo.svg" class="logo">
-  <div class="title"><b>Borrowing</b></div>
-  <div class="text">Lending and borrowing<br>made easy!</div>
+  <div class="title"><b>Pigify</b></div>
+  <div class="text">Your Library of <br>Things!</div>
 </div>
 
 <button class="loginButton" (click)="login()"><img src="./assets/icons/fb-icon.svg" width="20" height="20"/> Sign in
