--- a/src/app/users/list-users/list-users.component.html
+++ b/src/app/users/list-users/list-users.component.html
@@ -5,8 +5,8 @@
 
 
       <img src="./assets/icons/logo.svg" class="bannerLogo">
-      <div class="bannerTitle"><b>Borrowing</b></div>
-      <div class="bannerText"> - Lending and borrowing made easy!</div>
+      <div class="bannerTitle"><b>Pigify</b></div>
+      <div class="bannerText"> - Your Library of Things!</div>
 
       <div class="col-sm-5" >
         <ul>
