--- a/src/app/entities/entity-list/entity-list.component.html
+++ b/src/app/entities/entity-list/entity-list.component.html
@@ -68,7 +68,7 @@
 
 
   <div style="margin-bottom: 15px"></div>
-  <app-entity-list-nest  [entities]="entities" [joinedEntities]="joinedEntities" [userEntityName]="userEntityName" [listFilter]="listFilter"></app-entity-list-nest>
+  <app-entity-list-nest  [entities]="entities"  [userEntityName]="userEntityName" [listFilter]="listFilter"></app-entity-list-nest>
   </div>
 
 
